# LLM-Tinkering

./: README.md
LLM with RAG/: main.py  pyproject.toml
LLM with RAG/src/: Pipfile  diva.py  diva_chat.ipynb  gradio_interface.py  lmstudio.py  main.py  nemo_toolkit.py  requirements.txt  rough.txt  script.js  speechless.py  vad_interface.py  whisper.py  wilheld.py
LLM with RAG/src/.gradio/flagged/: dataset1.csv
LLM with RAG/src/chroma_db/49bec611-d016-463c-8eaa-c25607d9e6ae/: index_metadata.pickle
